force-app/main/default/objects/LMS_Assignment_Rule__c/LMS_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <label>LMS Assignment Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LMS Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>