force-app/main/default/objects/LMS_Assignment_Rule__c/fields/LMS_Department__c.field-meta.xml
<CustomField>
    <fullName>LMS_Department__c</fullName>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>