force-app/main/default/objects/LMS_Assignment_Rule__c/fields/LMS_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>