force-app/main/default/objects/LMS_Assignment_Rule__c/fields/LMS_Role__c.field-meta.xml
<CustomField>
    <fullName>LMS_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>