force-app/main/default/objects/LMS_Assignment_Rule__c/fields/LMS_Training__c.field-meta.xml
<CustomField>
    <fullName>LMS_Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training</label>
    <referenceTo>LMS_Training__c</referenceTo>
    <relationshipLabel>Assignment Rules</relationshipLabel>
    <relationshipName>Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>