force-app/main/default/objects/LMS_Assignment_Rule__c/fields/LMS_User_Status__c.field-meta.xml
<CustomField>
    <fullName>LMS_User_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>